# T2I-CompBench

./: .gitignore  LEADERBOARD.md  README.md  pyproject.toml  run_t2i_compbench.sh
src/BLIPvqa_eval/: BLIP_vqa.py  test.sh
src/BLIPvqa_eval/BLIP/: train_vqa_func.py
src/BLIPvqa_eval/data/: utils.py  vqa_dataset.py
src/BLIPvqa_eval/models/: blip.py  blip_pretrain.py  blip_vqa.py  med.py  vit.py
src/BLIPvqa_eval/transform/: randaugment.py
src/CLIPScore_eval/: CLIP_similarity.py
src/CLIPScore_eval/clip/: clip.py  simple_tokenizer.py
src/UniDet_eval/: 2D_spatial_eval.py  3D_spatial_eval.py  numeracy_eval.py
src/UniDet_eval/dataset/: __init__.py  caption_dataset.py  classification_dataset.py  pretrain_dataset.py  randaugment.py
src/UniDet_eval/experts/: generate_objdet.py  model_bank_3d.py
src/UniDet_eval/experts/depth/: vit.py
src/UniDet_eval/experts/obj_detection/: generate_dataset.py  generate_dataset_3d.py  utils.py
src/UniDet_eval/experts/obj_detection/configs/: Unified_learned_OCIM_R50_6x+2x.yaml  Unified_learned_OCIM_RS200_6x+2x.yaml
src/UniDet_eval/experts/obj_detection/unidet/: __init__.py  predictor.py
src/UniDet_eval/experts/obj_detection/unidet/data/: custom_dataset_dataloader.py
src/UniDet_eval/experts/obj_detection/unidet/data/datasets/: cityscapes_cocoformat.py  crowdhuman.py  det_categories.py  kitti.py  mapillary.py  objects365.py  viper.py  voc_cocoformat.py
src/UniDet_eval/experts/obj_detection/unidet/evaluation/: oideval.py
src/UniDet_eval/experts/obj_detection/unidet/modeling/backbone/: splat.py
src/UniDet_eval/experts/obj_detection/unidet/modeling/meta_arch/: unified_rcnn.py
src/UniDet_eval/experts/obj_detection/unidet/modeling/roi_heads/: custom_fast_rcnn.py  custom_roi_heads.py  multi_dataset_fast_rcnn.py  unified_roi_heads.py
src/t2i_compbench/: __init__.py  cli.py  run_t2i_compbench.sh
src/t2i_compbench/3_in_1_eval/: 3_in_1.py
src/t2i_compbench/BLIPvqa_eval/: BLIP_vqa.py
src/t2i_compbench/BLIPvqa_eval/BLIP/: utils.py
src/t2i_compbench/BLIPvqa_eval/data/: __init__.py
src/t2i_compbench/BLIPvqa_eval/models/: blip_pretrain.py
src/t2i_compbench/CLIPScore_eval/clip/: model.py
src/t2i_compbench/UniDet_eval/: 2D_spatial_eval.py  3D_spatial_eval.py  __init__.py  numeracy_eval.py
src/t2i_compbench/UniDet_eval/dataset/: utils.py  vqa_dataset.py
src/t2i_compbench/UniDet_eval/datasets/: prepare_panoptic_fpn.py
src/t2i_compbench/UniDet_eval/experts/: model_bank.py
src/t2i_compbench/UniDet_eval/experts/depth/: blocks.py  generate_dataset.py  models.py
src/t2i_compbench/UniDet_eval/experts/obj_detection/: utils.py
src/t2i_compbench/UniDet_eval/experts/obj_detection/configs/: Unified_learned_OCIM_R50_6x+2x.yaml  Unified_learned_OCIM_RS200_6x+2x.yaml
src/t2i_compbench/UniDet_eval/experts/obj_detection/unidet/: config.py
src/t2i_compbench/UniDet_eval/experts/obj_detection/unidet/data/: multi_dataset_dataloader.py
src/t2i_compbench/UniDet_eval/experts/obj_detection/unidet/data/datasets/: inst_categories.py  oid.py  register_oid.py  scannet.py  wilddash.py
src/t2i_compbench/UniDet_eval/experts/obj_detection/unidet/evaluation/: multi_dataset_evaluator.py
src/t2i_compbench/UniDet_eval/experts/obj_detection/unidet/modeling/backbone/: fpn_p5.py  resnest.py
src/t2i_compbench/t2i_dataset/: color.jsonl  complex.jsonl  numeracy.jsonl
t2i_dataset/: texture.jsonl
(+4 files in other folders)
